# ryugu

./: package.xml  setup.cfg  setup.py
docs/: HANDOFF.md  README.md  Research_Paper.md  Study_Guide.md  research_report.md  task.md  walkthrough.md
docs/latex/: diagram1.mmd  diagram2.mmd  diagram3.mmd  diagram4.mmd  md2tex.py  spacehopper_ieee.docx  spacehopper_ieee.tex
launch/: ryugu_swarm.launch.py  swarm_intelligence.launch.py
models/regolith_plane/: model.config  model.sdf
models/ryugu/: model.config  model.sdf
models/skydome/: model.config  model.sdf
models/skydome/meshes/: skybox.dae  skydome.mtl
models/spacehopper/: model.config  model.sdf
ryugu_sim/: attitude_controller.py  hopper_locomotion.py  landing_controller.py  spawner.py  swarm_gui.py  swarm_manager.py
scripts/: generate_detailed_spacehopper.py  monitor_attitude.py  monitor_gz_pose.py  monitor_height.py  monitor_height2.py  monitor_joints.py  test_attitude_tumble.py  trigger_jump.sh
worlds/: ryugu.sdf  test_skybox.sdf
