<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ryugu_sim</name>
  <version>1.0.0</version>
  <description>Team Jalpari Ryugu Asteroid Swarm Simulation (SpaceHopper Version)</description>
  <maintainer email="melvin@ryugu.sim">Melvin</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
